--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -2,8 +2,10 @@
 // Font Sizes
 
 $f9: 9px;
+$f10: 10px;
 $f11: 11px;
 $f12: 12px;
+$f13: 13px;
 $f14: 14px;
 $f15: 15px;
 $f16: 16px;
@@ -30,10 +32,19 @@ $f56: 56px;
 $f60: 60px;
 
 
+.f10 {
+  font-size: $f10;
+}
+.f11 {
+  font-size: $f11;
+}
+
 .f12 {
   font-size: $f12;
 }
-
+.f13 {
+  font-size: $f13;
+}
 .f14 {
   font-size: $f14;
 }
@@ -130,12 +141,13 @@ $f60: 60px;
 
 @media (max-width: 47.99em) {
 
-  .m-bolder {
-    font-weight: 900;
-  }
 
   .m-f9 {
     font-size: $f11;
+  }
+
+  .m-f10 {
+    font-size: $f10;
   }
 
   .m-f11 {
@@ -145,6 +157,10 @@ $f60: 60px;
 
   .m-f12 {
     font-size: $f12;
+  }
+
+  .m-f13 {
+    font-size: $f13;
   }
 
   .m-f14 {
@@ -219,4 +235,88 @@ $f60: 60px;
   .m-f88 {
     font-size: 88px;
   }
+}
+
+
+// Font Weight
+
+.normal {
+  font-weight: normal;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.bolder {
+  font-weight: bolder;
+}
+
+.fw100 {
+  font-weight: 100;
+}
+
+.fw200 {
+  font-weight: 200;
+}
+
+.fw300 {
+  font-weight: 300;
+}
+
+.fw400 {
+  font-weight: 400;
+}
+
+.fw500 {
+  font-weight: 500;
+}
+.fw600 {
+  font-weight: 600;
+}
+.fw700 {
+  font-weight: 700;
+}
+
+
+@media (max-width: 47.99em) {
+
+  .m-normal {
+    font-weight: normal;
+  }
+
+  .m-bold {
+    font-weight: bold;
+  }
+
+  .m-bolder {
+    font-weight: bolder;
+  }
+
+  .m-fw100 {
+    font-weight: 100;
+  }
+
+  .m-fw200 {
+    font-weight: 200;
+  }
+
+  .m-fw300 {
+    font-weight: 300;
+  }
+
+  .m-fw400 {
+    font-weight: 400;
+  }
+
+  .m-fw500 {
+    font-weight: 500;
+  }
+  .m-fw600 {
+    font-weight: 600;
+  }
+  .m-fw700 {
+    font-weight: 700;
+  }
+
 }
